# dpdk

./: .gitignore  .mailmap  Cargo.toml  bindgen  bindgen.h  bindings.rs  build.rs  include.h  main.rs  meson.build
.ci/: linux-setup.sh
.github/workflows/: build.yml
app/: meson.build
app/test_hello_rust/: main.c  main.rs
drivers/bus/vdev/: bus_vdev_driver.h  vdev.c
drivers/net/af_packet/: rte_eth_af_packet.c
drivers/net/ark/: ark_ethdev.c
drivers/net/thunderx/: nicvf_ethdev.c
examples/helloworld/: main.c
lib/: generate_seesaw.rs  meson.build
lib/eal/common/: eal_common_devargs.c
lib/ethdev/: rte_class_eth.c
lib/hello_rust/: lib.rs
lib/kvargs/: lib.rs  rte_kvargs.rs
rust/: meson.build  test.rs
rust-tests/: kvargs.rs
rust-util/: Cargo.toml  lib.rs
rust-util/src/: lib.rs  main.rs
rust/kvargs/: Cargo.toml  lib.rs
rust3p/: .gitignore  Cargo.toml  meson.build  revendor.bash
rust3p/src/: lib.rs
third-party-rust/: Cargo.toml  meson.build
