[package]
name = "rust-util"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
camino = "1.1.9"
cargo_metadata = "0.19.0"
clap = { version = "4.5.21", features = ["derive"] }
monostate = "0.1.13"
serde = { version = "1.0.215", features = ["derive"] }
serde_ignored = "0.1.10"
serde_json = "1.0.133"
strum = "0.26.3"
