[package]
name = "rust-util"
version = "0.1.0"
edition = "2021"

[dependencies]
camino = "1.1.9"
cargo_metadata = "0.19.0"
clap = { version = "4.5.21", features = ["derive"] }
expect-test = "1.5.0"
monostate = "0.1.13"
petgraph = "0.6.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_ignored = "0.1.10"
serde_json = "1.0.133"

[lib]
path = "lib.rs"
